<resources>
    <string name="app_name" translatable="false">TUDas</string>
    <string name="appointment_title">Title</string>
    <string name="button_save">Save</string>
    <string name="appointment_title_default">What to do?</string>
    <string name="appointment_description">Description</string>
    <string name="appointment_description_default">I\'m going to...</string>
    <string name="pick_date_hint">Pick a date, where you want your appointment to start</string>
    <string name="end_date">End Date</string>
    <string name="empty_not_saved">Appointment not saved because it is empty.</string>
    <string name="appointment_abbrevation">Abbreviation</string>
    <string name="abbrevation_example">Abbr.</string>
    <string name="title_activity_daily_appointments">DailyAppointments</string>
    <string name="start_date">Start Date</string>
    <string name="lan_english">English</string>
    <string name="lan_german">German</string>
    <string name="language">Language</string>
    <string name="notification_settings">Enable Notification Messages</string>
    <string name="hourSizeTitle">Size per Hour</string>
    <string name="nav_settings_title">Settings</string>
    <string name="nav_timetable_title">Timetable</string>
    <string name="appointment_room">Room</string>
    <string name="appointment_save">Appointment saved.</string>
    <string name="end_after_start">The end time must be after the start time.</string>
    <string name="start_unequal_end">The start time must not be equal to the end time.</string>
    <string name="abbreviation_not_empty">The abbreviation must not be empty.</string>
    <string name="title_not_empty">The title must not be empty.</string>
    <string name="title_activity_manage_labels">Manage Labels</string>
    <string name="nav_manageLabels_title">Manage Labels</string>
    <string name="title_activity_timetable">Timetable</string>
    <string name="timetableSizeTitle">Days in Timetable</string>
    <string name="popupDeleteButton">Delete</string>
    <string name="confirm_label_deletion">Do you really want to delete the label</string>
    <string name="label_deletion">Label Deletion</string>
    <string name="cancel">Cancel</string>
    <string name="color_picker_closed">Color Picker closed</string>
    <string name="color">Color</string>
    <string name="OK">OK</string>
    <string name="nothing_todo_today">Very well! Nothing to do today!</string>
    <string name="follow_list">You have no appointments today. Maybe you can follow some appointment lists?</string>
    <string name="new_appointment_label">New Appointment</string>
</resources>
