<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/add_appointment_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20px"
            android:layout_marginRight="20px"
            android:layout_marginTop="10px"
            android:minHeight="250dp">

            <RelativeLayout
                android:id="@+id/appointment_title"
                android:layout_width="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/appointment_title_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/appointment_title"
                    android:textSize="28px"
                    android:layout_centerHorizontal="true"/>

                <EditText
                    android:id="@+id/appointment_title_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/appointment_title_default"
                    android:inputType="text"
                    android:maxLength="40"
                    android:padding="@dimen/small_padding"
                    android:textSize="16px"
                    android:layout_below="@+id/appointment_title_title" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/appointment_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/appointment_title">

                <TextView
                    android:id="@+id/appointment_description_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/appointment_description"
                    android:textSize="28px"
                    android:layout_centerHorizontal="true"/>

                <EditText
                    android:id="@+id/appointment_description_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minLines="4"
                    android:maxLines="4"
                    android:hint="@string/appointment_description_default"
                    android:inputType="textMultiLine"
                    android:padding="@dimen/small_padding"
                    android:singleLine="false"
                    android:textSize="16px"
                    android:layout_below="@id/appointment_description_title"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/appointment_abbrevation_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/appointment_description"
                android:layout_marginLeft="20px"
                android:layout_marginRight="20px">

                <RelativeLayout
                    android:id="@+id/appointment_abbrevation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true">

                    <TextView
                        android:id="@+id/appointment_abbrevation_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/appointment_abbrevation"
                        android:textSize="28px"/>

                    <EditText
                        android:id="@+id/appointment_abbrevation_input"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/abbrevation_example"
                        android:maxLength="6"
                        android:maxLines="1"
                        android:textSize="16px"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@id/appointment_abbrevation_title"/>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/appointment_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20px"
                    android:layout_alignParentRight="true">

                    <TextView
                        android:id="@+id/appointment_color_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Color"
                        android:textSize="28px"/>

                    <View
                        android:layout_width="40px"
                        android:layout_height="40px"
                        android:background="@color/colorPrimary"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10px"
                        android:layout_below="@id/appointment_color_title"/>

                </RelativeLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/appointment_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20px"
                android:layout_marginRight="20px"
                android:layout_below="@id/appointment_abbrevation_color">

                <RelativeLayout
                    android:id="@+id/appointment_time_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true">

                    <TextView
                        android:id="@+id/start_date_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/start_date"
                        android:textSize="28px"/>

                    <EditText
                        android:id="@+id/start_date_input"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusable="false"
                        android:inputType="date"
                        android:textSize="16px"
                        android:layout_alignParentLeft="true"/>

                    <EditText
                        android:id="@+id/start_time_input"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:inputType="date"
                        android:textSize="16px"
                        android:layout_toRightOf="@id/start_date_input"/>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/appointment_time_end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true">

                    <TextView
                        android:id="@+id/end_date_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/end_date"
                        android:textSize="28px"/>

                    <EditText
                        android:id="@+id/end_date_input"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusable="false"
                        android:inputType="date"
                        android:textSize="16px"/>

                    <EditText
                        android:id="@+id/end_time_input"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:inputType="date"
                        android:textSize="16px"
                        android:layout_toRightOf="@id/end_date_input"/>

                </RelativeLayout>

            </RelativeLayout>

            <Button
                android:id="@+id/button_save_appointment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="@string/button_save"
                android:textColor="@color/buttonLabel"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/appointment_time"/>

        </RelativeLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>